fix: ensure Made in India tag is visible on all screen sizes

--- a/src/components/organisms/Navbar/Navbar.css
+++ b/src/components/organisms/Navbar/Navbar.css
@@ -67,7 +67,14 @@
 
 @media (max-width: 400px) {
   .navbar-made-in-india {
-    display: none;
+    margin-left: 6px;
+    padding-left: 6px;
+    font-size: 7px;
+  }
+  
+  .navbar-made-in-india span {
+    padding: 1px 3px;
+    font-size: 7px;
   }
 }
 
